--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -62,7 +62,7 @@
   box-shadow: none;
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a:hover, .wrap.is-shortpixel-bulk-page header .top-buttons button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a i.switch, .wrap.is-shortpixel-bulk-page header .top-buttons button i.switch {
   width: 18px;
@@ -276,7 +276,7 @@
   width: 30px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:hover {
-  background: #1793ab;
+  background: rgb(23.0629370629, 146.5174825175, 170.9370629371);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:disabled {
@@ -488,7 +488,7 @@
   line-height: 1;
 }
 .wrap.is-shortpixel-bulk-page .button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page .button .dashicons {
@@ -516,7 +516,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page .button-primary:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page nav {
   margin: 45px 0;
@@ -704,7 +704,7 @@
   transition: all 900ms;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused:hover {
-  background: #1ca9b3;
+  background: rgb(27.5926724138, 169.1163793103, 178.9073275862);
 }
 .wrap.is-shortpixel-bulk-page .processor-paused .dashicons {
   margin-right: 6px;
@@ -1004,12 +1004,26 @@
   display: flex;
   flex-direction: row;
 }
+.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper-ai {
+  background-color: #F4FBFC;
+  flex: 1;
+  border-radius: 15px;
+  margin: 0 20px;
+  float: left;
+  padding-top: 10px;
+}
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper {
   background-color: #F4FBFC;
   flex: 1;
   border-radius: 15px;
-  margin: 0 5%;
+  margin: 0 20px;
+  max-width: 43%;
+  float: left;
   padding-top: 10px;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper.ai {
+  max-width: none;
+  margin-left: 27px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper h4 {
   font-size: 14px;
@@ -1019,6 +1033,7 @@
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper h4.totals {
   padding-left: 15px;
   color: #3c434a;
+  min-width: 220px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper h4 .dashicons {
   color: #1FBEC9;
@@ -1045,7 +1060,7 @@
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div > span {
   display: table-cell;
   border-bottom: 1px solid #ccc;
-  width: 50%;
+  width: 15%;
   padding: 15px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div > span.totals {
@@ -1072,15 +1087,21 @@
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits-sub-wrapper {
   display: block;
   float: left;
+  max-width: 62%;
+  padding-left: 20px;
+  border-right: 1px solid #1ABDCA;
+  margin-right: 35px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .ai-credits-sub-wrapper {
   display: block;
   float: left;
-  border-left: 1px solid #1ABDCA;
+  width: 33%;
+  margin-left: -20px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits {
   display: table;
-  margin: 35px 0 35px 25px;
+  margin: 0 10px;
+  padding-top: 20px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits.ai {
   max-width: 33%;
@@ -1306,9 +1327,15 @@
   top: 0;
   width: 100%;
   background-color: #D9F9FF;
-  color: #fff;
-  font-size: 20px;
+  color: #000;
+  font-size: 18px;
+  font-weight: 600;
   padding: 15px 0;
+  border-radius: 15px 15px 0 0;
+}
+.wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section .title span,
+.wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .title span {
+  padding-left: 40px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section .image-preview-line,
 .wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .image-preview-line {
@@ -1462,7 +1489,7 @@
   transition: all 0.5s ease;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish:hover {
-  background: #24d1dd;
+  background: rgb(36.2392241379, 209.2887931034, 221.2607758621);
 }
 .wrap.is-shortpixel-bulk-page .part-debug {
   background: #000;
