--- a/res/css/shortpixel-media-modal.css
+++ b/res/css/shortpixel-media-modal.css
@@ -1,3 +1,15 @@
+@font-face {
+  src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  src: url("../fonts/Roboto-Bold.ttf") format("truetype");
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+}
 .shortpixel-media-modal-shade {
   position: fixed;
   left: 0;
@@ -13,27 +25,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  top: 25px;
+  position: fixed;
+  top: 45px;
   left: 0;
   right: 0;
+  z-index: 300;
 }
 .shortpixel-media-modal .modal-wrapper {
   z-index: 300;
   width: 80%;
-  height: 80vh;
-  max-height: 700px;
-  background: #fff;
+  max-height: 100vh;
 }
 .shortpixel-media-modal .modal-wrapper .title {
-  background: #116C7E;
+  background: #1ABDCA;
   color: white;
   padding: 6px;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
 }
 .shortpixel-media-modal .modal-wrapper .title h3 {
   margin: 5px 0;
   text-align: center;
   color: #fff;
+  font-size: 16px;
 }
 .shortpixel-media-modal .modal-wrapper .title span {
   font-size: 16px;
@@ -41,19 +55,64 @@
   float: right;
   cursor: pointer;
 }
+.shortpixel-media-modal .modal-wrapper .modal-content-wrapper {
+  width: 80%;
+  padding: 0 10%;
+  background: #fff;
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
+}
 .shortpixel-media-modal .modal-wrapper .image-wrapper {
-  height: 85%;
   display: flex;
   flex-direction: row;
   align-items: stretch;
+  position: relative;
+  min-height: 40vh;
 }
-.shortpixel-media-modal .modal-wrapper .image-wrapper > div {
+.shortpixel-media-modal .modal-wrapper .image-wrapper .image-original, .shortpixel-media-modal .modal-wrapper .image-wrapper .image-preview {
   flex: 1;
   position: relative;
-  padding: 16px;
+  padding: 16px 0;
+}
+.shortpixel-media-modal .modal-wrapper .image-wrapper .image-original > i, .shortpixel-media-modal .modal-wrapper .image-wrapper .image-preview > i {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.shortpixel-media-modal .modal-wrapper .image-wrapper .image-original span, .shortpixel-media-modal .modal-wrapper .image-wrapper .image-preview span {
+  position: absolute;
+  top: 30px;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 700;
+  color: #000;
+  padding: 8px 12px;
 }
 .shortpixel-media-modal .modal-wrapper .image-wrapper > div:first-child {
   padding-right: 0;
+  padding-left: 0;
+}
+.shortpixel-media-modal .modal-wrapper .image-wrapper > div:first-child span {
+  left: 4px;
+  background-color: #A9A9A9;
+}
+.shortpixel-media-modal .modal-wrapper .image-wrapper > div:last-child {
+  padding-right: 0;
+}
+.shortpixel-media-modal .modal-wrapper .image-wrapper > div:last-child span {
+  right: 4px;
+  background-color: #1ABDCA;
+}
+.shortpixel-media-modal .modal-wrapper .image-wrapper .image-arrow {
+  width: 35px;
+  border: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 0 0 4px;
+}
+.shortpixel-media-modal .modal-wrapper .image-wrapper .image-arrow i {
+  width: 25px;
+  height: 25px;
+  filter: brightness(0) saturate(100%) invert(53%) sepia(82%) saturate(452%) hue-rotate(136deg) brightness(100%) contrast(89%);
 }
 .shortpixel-media-modal .modal-wrapper .image-wrapper i {
   display: inline-block;
@@ -75,10 +134,14 @@
 .shortpixel-media-modal .modal-wrapper .action-bar {
   display: flex;
   width: 100%;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   background: #F4FBFC;
-  flex-direction: column;
+  flex-direction: row;
+  padding: 16px 36px;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  box-sizing: border-box;
 }
 .shortpixel-media-modal .modal-wrapper .action-bar .action_wrapper {
   display: none;
@@ -90,13 +153,19 @@
 }
 .shortpixel-media-modal .modal-wrapper .action-bar .new_file_title.wrapper {
   display: flex;
+  flex-direction: column;
   color: #000;
-  gap: 25px;
+  gap: 15px;
   margin: 25px 0;
 }
 .shortpixel-media-modal .modal-wrapper .action-bar .new_file_title.wrapper input {
   color: #116C7E;
   min-width: 300px;
+  font-weight: 400;
+}
+.shortpixel-media-modal .modal-wrapper .action-bar .new_file_title.wrapper p {
+  font-weight: 700;
+  margin: 0;
 }
 .shortpixel-media-modal .modal-wrapper .action-bar .remove.action_wrapper.active {
   flex-direction: column;
@@ -116,6 +185,52 @@
 }
 .shortpixel-media-modal .modal-wrapper .action-bar .remove.action_wrapper.active .bg_transparency {
   display: none;
+}
+.shortpixel-media-modal .modal-wrapper .action-bar .scale.action_wrapper {
+  flex-direction: column;
+}
+.shortpixel-media-modal .modal-wrapper .action-bar .filler {
+  width: 10%;
+}
+.shortpixel-media-modal .modal-wrapper .button-wrapper {
+  display: flex;
+  background: #F4FBFC;
+  padding: 8px;
+  width: 100%;
+  box-sizing: border-box;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+}
+.shortpixel-media-modal .modal-wrapper .button-wrapper .button {
+  color: #fff;
+  background: #1ABDCA;
+  padding: 10px 12px;
+  border: 0;
+  margin: 4px;
+  font-family: "Roboto";
+  font-weight: 700;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: all 0.1s ease-in-out;
+  box-shadow: none;
+  padding: 8px 16px;
+}
+.shortpixel-media-modal .modal-wrapper .button-wrapper .button:hover {
+  background: #32d7e5;
+}
+.shortpixel-media-modal .modal-wrapper .button-wrapper .button i.switch {
+  width: 18px;
+  height: 12px;
+}
+.shortpixel-media-modal .modal-wrapper .button-wrapper .button i.notifications {
+  width: 14px;
+  height: 14px;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(251deg) brightness(108%) contrast(108%);
+}
+.shortpixel-media-modal .modal-wrapper .button-wrapper .button i {
+  width: 15px;
+  height: 15px;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(20%) hue-rotate(283deg) brightness(105%) contrast(105%);
 }
 .shortpixel-media-modal .modal-wrapper .load-preview-spinner {
   position: absolute;
