--- a/res/scss/elements/_colors.scss
+++ b/res/scss/elements/_colors.scss
@@ -5,6 +5,7 @@ $color-light: #d1f5fd;
 
 $color-brokenwhite: #F5F5F5;
 $color-grey: #D7D7D7;
+$color_grey_closed: #A9A9A9;
 
 $blue_default: #1ABDCA;
 $blue_dark : #116C7E;
@@ -24,3 +25,4 @@ $filter_orange: brightness(0) saturate(100%) invert(72%) sepia(57%) saturate(456
 $filter_red:  brightness(0) saturate(100%) invert(20%) sepia(95%) saturate(6009%) hue-rotate(360deg) brightness(99%) contrast(125%);
 $filter_green: brightness(0) saturate(100%) invert(58%) sepia(24%) saturate(4079%) hue-rotate(125deg) brightness(97%) contrast(101%);
 $filter_white: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(20%) hue-rotate(283deg) brightness(105%) contrast(105%);
+$filter_blue_default: brightness(0) saturate(100%) invert(53%) sepia(82%) saturate(452%) hue-rotate(136deg) brightness(100%) contrast(89%);
