--- a/res/scss/shortpixel-media-modal.scss
+++ b/res/scss/shortpixel-media-modal.scss
@@ -65,11 +65,12 @@
 
         .modal-content-wrapper 
         {
-             width: 80%; 
+             width: 100%; 
              padding: 0 10%;
              background: #fff;
              border-bottom-left-radius: 14px; 
              border-bottom-right-radius: 14px;
+             box-sizing: border-box;
 
         }
         .image-wrapper
@@ -99,7 +100,9 @@
                     font-size: 16px;
                     font-weight: 700;
                     color: #000;
-                    padding: 8px 12px;
+                    padding: 8px 16px;
+                    left: 12px; 
+                    text-transform: uppercase; 
                 }
             }
             > div 
@@ -111,7 +114,6 @@
                     padding-left: 0;
                     span 
                     {
-                        left: 4px;
                         background-color: $color_grey_closed;
                     }
                 }
@@ -120,16 +122,17 @@
                      padding-right: 0;
                      span 
                      {
-                         right: 4px;
                          background-color: $blue_default;
                      }
  
                 }
+
+
             }
             
             .image-arrow 
             {
-                 width: 35px; 
+                 width: 65px; 
                  border: 0;
                  display: flex; 
                  align-items: center; 
@@ -210,8 +213,14 @@
 
             .remove.action_wrapper.active
             {
+                flex-direction: column; 
+
+                h3
+                {
+                    margin: 0;
+                }
+
                 // display: flex; 
-                 flex-direction: column; 
 
                  #solid_selector 
                  {
@@ -222,6 +231,7 @@
                  label 
                  {
                      margin: 4px 0;
+                     font-weight: 700;
                  }
                  .howto {
                     display: none;
@@ -240,6 +250,12 @@
             .scale.action_wrapper
             {
                 flex-direction: column; 
+                h3 {
+                    margin: 0;
+                }
+                h4 {
+                    margin: 8px 0 0 0;
+                }
             }
             .filler {
                 width: 10%;
