--- a/res/scss/view/_inline-help.scss
+++ b/res/scss/view/_inline-help.scss
@@ -1,6 +1,3 @@
-
-
-
 // online documentation feature
 i.documentation {
   font-size: 1.8em;
@@ -58,6 +55,7 @@ div.spio-modal {
     iframe {
         width: 100%;
         height: 625px;
+        background-color: #fff;
     }
 		.spio-close-help-button {
 			 position:absolute;
