--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -294,6 +294,11 @@
   height: 222px;
   border-radius: 50%;
   background-color: #F4FBFC;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper .title-offer {
+  margin: 0;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .dashboard-text {
   /* @include breakpoint(0, 768px) {
@@ -692,7 +697,7 @@
   display: none;
   margin: 25px auto;
   width: 95%;
-  background: #1fbec9;
+  background: rgb(31, 190, 201);
   border: 1px solid #ccc;
   font-size: 26px;
   line-height: 26px;
@@ -775,7 +780,7 @@
   font-weight: 700;
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.result .line {
-  background: linear-gradient(90deg, #cccccc 0%, #cccccc 49.9%, white 51%, white 100%);
+  background: linear-gradient(90deg, rgb(204, 204, 204) 0%, rgb(204, 204, 204) 49.9%, rgb(255, 255, 255) 51%, rgb(255, 255, 255) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.select .line {
   left: 50%;
@@ -827,7 +832,7 @@
      }*/
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .load.wrapper,
 .wrap.is-shortpixel-bulk-page section.panel.selection .interface.wrapper {
@@ -986,7 +991,7 @@
   background: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary h3 {
   font-size: 24px;
@@ -1176,7 +1181,7 @@
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .line,
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .process_heading,
 .wrap.is-shortpixel-bulk-page section.panel.finished .process_heading {
@@ -1474,7 +1479,7 @@
   background: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav {
   text-align: center;
