Update layout on the bulk processing page

--- a/res/scss/bulk/_dashboard.scss
+++ b/res/scss/bulk/_dashboard.scss
@@ -65,8 +65,8 @@
                {
                   width: 222px;
                   height: 222px;
-                  border-radius: 50%; 
-                  background-color: $blue_background;
+                  //border-radius: 50%; 
+                  //background-color: $blue_background;
                   background-position: center;
                   background-repeat: no-repeat;
                }
