--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -62,7 +62,7 @@
   box-shadow: none;
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a:hover, .wrap.is-shortpixel-bulk-page header .top-buttons button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a i.switch, .wrap.is-shortpixel-bulk-page header .top-buttons button i.switch {
   width: 18px;
@@ -276,7 +276,7 @@
   width: 30px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:hover {
-  background: #1793ab;
+  background: rgb(23.0629370629, 146.5174825175, 170.9370629371);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:disabled {
@@ -292,8 +292,6 @@
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper .top-circle .the-circle {
   width: 222px;
   height: 222px;
-  border-radius: 50%;
-  background-color: #F4FBFC;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -493,7 +491,7 @@
   line-height: 1;
 }
 .wrap.is-shortpixel-bulk-page .button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page .button .dashicons {
@@ -521,7 +519,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page .button-primary:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page nav {
   margin: 45px 0;
@@ -709,7 +707,7 @@
   transition: all 900ms;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused:hover {
-  background: #1ca9b3;
+  background: rgb(27.5926724138, 169.1163793103, 178.9073275862);
 }
 .wrap.is-shortpixel-bulk-page .processor-paused .dashicons {
   margin-right: 6px;
@@ -1352,15 +1350,18 @@
 .wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .image-preview-line [data-result=filename] {
   overflow: hidden;
   font-weight: 700;
-  margin-top: -12px;
+  margin-top: -5px;
+  color: #000;
+  z-index: 10;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section .image-preview-line .opt-circle-image,
 .wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .image-preview-line .opt-circle-image {
-  width: 55px;
-  height: 55px;
+  width: 45px;
+  height: 45px;
   float: right;
-  margin-top: 12px;
+  margin-top: 1px;
   margin-right: 5%;
+  z-index: 1;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section .image-preview-line .opt-circle-image .trail,
 .wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .image-preview-line .opt-circle-image .trail {
@@ -1464,9 +1465,15 @@
   font-weight: 700;
   font-size: 14px;
 }
+.wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section .ai-preview-wrapper,
+.wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .ai-preview-wrapper {
+  padding: 15px 40px;
+  border-top: solid 1px #D7D7D7;
+}
 .wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section .ai-preview-wrapper .ai-preview-data strong,
 .wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .ai-preview-wrapper .ai-preview-data strong {
   text-transform: capitalize;
+  color: #116C7E;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process nav,
 .wrap.is-shortpixel-bulk-page section.panel.finished nav {
@@ -1493,7 +1500,7 @@
   transition: all 0.5s ease;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish:hover {
-  background: #24d1dd;
+  background: rgb(36.2392241379, 209.2887931034, 221.2607758621);
 }
 .wrap.is-shortpixel-bulk-page .part-debug {
   background: #000;
