--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -62,7 +62,7 @@
   box-shadow: none;
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a:hover, .wrap.is-shortpixel-bulk-page header .top-buttons button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a i.switch, .wrap.is-shortpixel-bulk-page header .top-buttons button i.switch {
   width: 18px;
@@ -276,7 +276,7 @@
   width: 30px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:hover {
-  background: rgb(23.0629370629, 146.5174825175, 170.9370629371);
+  background: #1793ab;
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:disabled {
@@ -491,7 +491,7 @@
   line-height: 1;
 }
 .wrap.is-shortpixel-bulk-page .button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page .button .dashicons {
@@ -519,7 +519,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page .button-primary:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-bulk-page nav {
   margin: 45px 0;
@@ -680,13 +680,14 @@
   top: 4px;
   padding: 8px;
   height: 100%;
-  border: 1px solid #000;
+  border: 1px solid #1ABDCA;
   width: 80%;
-  margin: 30px auto;
+  margin: 30px auto 30px;
   background: rgba(255, 255, 255, 0.9);
   line-height: 22px;
   max-height: 300px;
   overflow-y: scroll;
+  box-sizing: border-box;
 }
 .wrap.is-shortpixel-bulk-page .panel .errorbox .fatal {
   color: #ff0000;
@@ -707,7 +708,7 @@
   transition: all 900ms;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused:hover {
-  background: rgb(27.5926724138, 169.1163793103, 178.9073275862);
+  background: #1ca9b3;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused .dashicons {
   margin-right: 6px;
@@ -767,7 +768,7 @@
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.active .outer {
   background-color: #1ABDCA;
   color: #fff;
-  bordeir-color: #F4FBFC;
+  border-color: #F4FBFC;
   height: 47px;
   width: 47px;
   margin-top: -46px;
@@ -1083,9 +1084,6 @@
 .wrap.is-shortpixel-bulk-page section.panel.summary .totals .number {
   margin-left: 35px;
 }
-.wrap.is-shortpixel-bulk-page section.panel.summary .credits-wrapper {
-  align-items: center;
-}
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits-sub-wrapper {
   display: block;
   float: left;
@@ -1189,9 +1187,11 @@
 .wrap.is-shortpixel-bulk-page section.panel.process .process_heading h3,
 .wrap.is-shortpixel-bulk-page section.panel.finished .process_heading h3 {
   border: 0;
+  text-align: center;
+  font-weight: 700;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization,
-.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization {
+.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization,
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization {
   position: absolute;
   top: 0px;
   right: 0;
@@ -1199,9 +1199,10 @@
   justify-content: center;
   z-index: 2;
   background: rgba(255, 255, 255, 0.4);
+  align-items: center;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization p,
-.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization p {
+.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization p,
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization p {
   margin: 0;
   font-size: 13px;
   position: absolute;
@@ -1214,35 +1215,39 @@
   border-radius: 3px;
   white-space: nowrap;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization .opt-circle-average,
-.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization .opt-circle-average {
+.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization .opt-circle-average,
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average {
   width: 100px;
   height: 100px;
-  float: right;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization .opt-circle-average .trail,
-.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization .opt-circle-average .trail {
+.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization .opt-circle-average .trail,
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .trail {
   stroke: #ddd;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization .opt-circle-average .path,
-.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization .opt-circle-average .path {
+.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization .opt-circle-average .path,
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .path {
   stroke: #1cbecb;
   stroke-linecap: round;
   transition: stroke-dashoffset 0.5s ease 0s;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization .opt-circle-average .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization .opt-circle-average .text {
+.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization .opt-circle-average .text,
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .text {
   fill: #1FBEC9;
   font-size: 28px;
   font-weight: 700;
   dominant-baseline: middle;
   text-anchor: middle;
 }
+.wrap.is-shortpixel-bulk-page section.panel.process h3.heading,
+.wrap.is-shortpixel-bulk-page section.panel.finished h3.heading {
+  text-align: center;
+  font-weight: 700;
+}
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary {
   display: table;
   width: 80%;
-  margin: 30px auto;
+  margin: 30px auto 0;
   border-radius: 16px;
   background-color: #F4FBFC;
 }
@@ -1255,6 +1260,10 @@
   display: table-cell;
   padding: 16px;
   width: 33%;
+}
+.wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary p.finished-paragraph,
+.wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary p.finished-paragraph {
+  padding: 6px 12px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .heading,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .heading {
@@ -1269,6 +1278,10 @@
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .heading .dashicons,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .heading .dashicons {
   color: #1ABDCA;
+}
+.wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .heading > span:first-child,
+.wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .heading > span:first-child {
+  font-weight: 700;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .line-progressbar,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .line-progressbar {
@@ -1299,7 +1312,7 @@
   width: 10%;
   top: 0;
   bottom: 0;
-  background: #116C7E;
+  background: #1ABDCA;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .line-progressbar .finished-paragraph,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .line-progressbar .finished-paragraph {
@@ -1314,12 +1327,29 @@
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .display-error-box {
   float: right;
 }
+.wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .display-error-box input,
+.wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .display-error-box input {
+  display: none;
+}
+.wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .display-error-box input:checked .collap-arrow .icon,
+.wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .display-error-box input:checked .collap-arrow .icon {
+  transform: rotate(180deg);
+}
+.wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .display-error-box span,
+.wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .display-error-box span {
+  color: #116C7E;
+  text-decoration: underline;
+}
+.wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .display-error-box .collap-arrow,
+.wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .display-error-box .collap-arrow {
+  transition: rotate 1s linear;
+}
 .wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section,
 .wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section {
   background: #F6F9FF;
   border: 1px solid #DFEAFF;
   border-radius: 16px;
-  width: 80%;
+  width: 70%;
   margin: 15px auto;
   position: relative;
 }
@@ -1456,6 +1486,10 @@
 .wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .preview-wrapper .image.source {
   margin-right: 8px;
 }
+.wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section .preview-wrapper .image-arrow i,
+.wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .preview-wrapper .image-arrow i {
+  filter: brightness(0) saturate(100%) invert(53%) sepia(82%) saturate(452%) hue-rotate(136deg) brightness(100%) contrast(89%);
+}
 .wrap.is-shortpixel-bulk-page section.panel.process .image-preview-section .preview-wrapper .image.result,
 .wrap.is-shortpixel-bulk-page section.panel.finished .image-preview-section .preview-wrapper .image.result {
   margin-left: 8px;
@@ -1488,8 +1522,49 @@
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .line {
   background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  z-index: 2;
+  background: rgba(255, 255, 255, 0.4);
+  align-items: center;
+  flex-direction: column;
+}
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization p {
+  font-size: 13px;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  padding: 6px 10px;
+  color: #fff;
+  background: rgba(15, 106, 125, 0.5);
+  font-weight: 700;
+  border-radius: 3px;
+  white-space: nowrap;
+}
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average {
+  width: 300px;
+  height: 300px;
+}
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .trail {
+  stroke: #ddd;
+}
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .path {
+  stroke: #1cbecb;
+  stroke-linecap: round;
+  transition: stroke-dashoffset 0.5s ease 0s;
+}
+.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .text {
+  fill: #1FBEC9;
+  font-size: 28px;
+  font-weight: 700;
+  dominant-baseline: middle;
+  text-anchor: middle;
+}
 .wrap.is-shortpixel-bulk-page section.panel.finished nav {
   text-align: center;
+  margin: 25px auto;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish {
   padding: 12px 60px;
@@ -1500,7 +1575,7 @@
   transition: all 0.5s ease;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish:hover {
-  background: rgb(36.2392241379, 209.2887931034, 221.2607758621);
+  background: #24d1dd;
 }
 .wrap.is-shortpixel-bulk-page .part-debug {
   background: #000;
