--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -22,13 +22,14 @@
     } */
 
   h3.heading {
-    margin: 15px 0 15px 0px;
-    padding-left: 15px;
-    padding-bottom: 12px;
-    font-size: 20px;
-    font-weight: 400;
+    width: 90%;
+    margin: 0 auto;
+    padding-left: 10px;
+    //padding-bottom: 12px;
+    font-size: 24px;
+    font-weight: 600;
     line-height: 42px;
-    border-bottom: 1px solid #ccc;
+    //border-bottom: 1px solid #ccc;
     position: relative;
 
     span {
@@ -43,8 +44,14 @@
 
   // This one can't be limited in width, because it breaks frontpage bulk.
   p.description {
-    font-size: 14px;
-    margin: 15px 0 15px 15px;
+    font-size: 12px;
+    font-weight: 700;
+    color: $blue_dark;
+    //margin: 15px 20px;
+    margin: 0 auto;
+    padding-left: 10px;
+    width: 90%;
+    display: block;
   }
 
   .button {
@@ -400,14 +407,16 @@
   }
 
   section.spio-progressbar {
-    margin: 0 0 30px 0;
+    width: 90%;
+    margin: 20px auto;
     background-color: $blue_background;
     padding: 16px;
+    border-radius: 15px;
 
     .flex {
       display: flex;
       flex-direction: row;
-      width: 90%;
+      //width: 90%;
       justify-content: space-around;
       margin: 0 auto;
 
@@ -554,7 +563,7 @@
         color: #ccc;
         font-weight: 700;
         align-items: center;
-        width: 90%;
+        width: 80%;
         margin: auto;
 
         >span {
@@ -593,18 +602,35 @@
     }
 
     .option-block {
-      margin: 0 auto;
-      width: 88%;
+      margin: 10px auto 0 auto;
+      width: 90%;
       background-color: $blue_background;
       padding: 12px;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+
+      &.all-round {
+        border-radius: 15px;
+      }
 
       h2 {
         font-size: 22px;
-        color: #555;
+        color: #000;
+        padding-left: 5px;
+      }
+
+      h3 {
+        font-size: 20px;
+        color: #000;
+        padding-left: 5px;
       }
 
       p {
-        margin-left: 0;
+        margin-left: 5px;
+      }
+
+      .approx {
+        margin-left: 5px;
       }
 
     }
@@ -614,9 +640,11 @@
        display: flex; 
        background-color: $blue_background;
        margin: 0 auto 5px;
-       width: 88%;
+       width: 90%;
        padding: 12px;
-       align-items: center; 
+       align-items: center;
+       border-bottom-left-radius: 15px;
+       border-bottom-right-radius: 15px;
 
        .title 
        {
@@ -638,6 +666,12 @@
 
     .optiongroup {
 
+      &.ai-images {
+         > .switch_button:first-child {
+          width: 100%;
+         }
+      }
+
       //margin-left: 15px;
       .switch_button {
         display: inline-block;
@@ -645,12 +679,14 @@
         {
            margin-left: 65px;
         }
+        
       }
 
       h4 {
         font-size: 14px;
         font-weight: 700;
         display: inline-block;
+        padding-left: 5px;
 
         //margin-left: 25px;
         >label {
